tests/content-scanning/collisions/snapshot.txt
*-----------------------------------------------*
|    WARNING: THIS IS A DEBUG BUILD OF ZINE     |
|-----------------------------------------------|
| Debug builds enable expensive sanity checks   |
| that reduce performance.                      |
|                                               |
| To create a release build, run:               |
|                                               |
|           zig build --release=fast            |
|                                               |
| If you're investigating a bug in Zine, then a |
| debug build might turn confusing behavior     |
| into a crash.                                 |
|                                               |
| To disable all forms of concurrency, you can  |
| add the following flag to your build command: |
|                                               |
|              -Dsingle-threaded                |
|                                               |
*-----------------------------------------------*

content/index.smd:16:12: error: invalid layout in alternatives
|    .layout = "",
|              ^^

content/page.smd:16:13: error: invalid layout in alternatives
|    .layout = "",
|              ^^

content/nested/path/page.smd:15:12: error: invalid layout in alternatives
|    .layout = "",
|              ^^

page/index.html: error: output url collision detected
   between  page.smd (main output)
   and      page/index.smd (main output)

index.html: error: output url collision detected
   between  index.smd (main output)
   and      index.smd (page alias)

foo/bar/baz.html: error: output url collision detected
   between  index.smd (page alias)
   and      page.smd (page alias)

foo/bar.html: error: output url collision detected
   between  index.smd (page alias)
   and      page.smd (page alias)

README.html: error: output url collision detected
   between  index.smd (page alias)
   and      page.smd (page alias)

nested/path/page/index.html: error: output url collision detected
   between  nested/path/page.smd (main output)
   and      page.smd (page alias)

another_index.html: error: output url collision detected
   between  index.smd (page alias)
   and      nested/path/page.smd (page alias)

foo/bar/baz.html: error: output url collision detected
   between  index.smd (page alias)
   and      nested/path/page.smd (page alias)

foo/bar.html: error: output url collision detected
   between  index.smd (page alias)
   and      nested/path/page.smd (page alias)

nested/path/page/README.html: error: output url collision detected
   between  index.smd (page alternative 'readme')
   and      nested/path/page.smd (page alternative 'readme')

----------------------------
       -- VARIANT --
----------------------------
.id = 0,
.content_dir_path = content

  ------- SECTION -------
.index = 1,
.section_path = content/,
.pages = [
   content/page.smd -> content/page/index.html
   content/nested/path/page.smd -> content/nested/path/page/index.html
   content/page/index.smd -> content/page/index.html #2
],


  ------- SECTION -------
.index = 2,
.section_path = content/page/,
.pages = [
],



 ----- EXIT CODE: 1 -----
